Update Progress: DB and ProgMeth